added additional notifications in backend and updated openapi yml file
